
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* v_nm; int num; } ;


 int FAD ;
 int NRL ;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 TYPE_1__* plat ;
 int stdout ;

void prcode_usage(char *f_nm)
{
        int r_n=(NRL);
        fprintf(stdout," Usage: %s -options arguments\n\n",f_nm);
        fprintf(stdout," \t-h [hostname]   : Target hostname & ip.\n");
        fprintf(stdout," \t-u [userid]     : User id.\n");
        fprintf(stdout," \t-p [passwd]     : User password.\n");
        fprintf(stdout," \t-n [port num]   : Target port number.\n");
        fprintf(stdout," \t-s [shelladdr]  : Shellcode address.\n");
        fprintf(stdout," \t-b              : Brute-Force mode.\n");
        fprintf(stdout," \t-m [max num]    : Brute-Force Count number.\n");
        fprintf(stdout," \t-i              : help information.\n");
        fprintf(stdout," \t-t [target num] : Select target number.\n\n");
        for(r_n=(NRL);plat[r_n].v_nm!=(((void*)0));r_n++)
        {
                fprintf(stdout," \t\t{%d} %s.\n",(plat[r_n].num),(plat[r_n].v_nm));
        }
        fprintf(stdout,"\n Example: %s -hlocalhost -ux82 -px82 -n21 -t0\n\n",f_nm);
        exit(FAD);
}
