; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_22974.c_prcode_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_22974.c_prcode_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i32 }

@NRL = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c" Usage: %s -options arguments\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [43 x i8] c" \09-h [hostname]   : Target hostname & ip.\0A\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c" \09-u [userid]     : User id.\0A\00", align 1
@.str.3 = private unnamed_addr constant [36 x i8] c" \09-p [passwd]     : User password.\0A\00", align 1
@.str.4 = private unnamed_addr constant [41 x i8] c" \09-n [port num]   : Target port number.\0A\00", align 1
@.str.5 = private unnamed_addr constant [40 x i8] c" \09-s [shelladdr]  : Shellcode address.\0A\00", align 1
@.str.6 = private unnamed_addr constant [39 x i8] c" \09-b              : Brute-Force mode.\0A\00", align 1
@.str.7 = private unnamed_addr constant [47 x i8] c" \09-m [max num]    : Brute-Force Count number.\0A\00", align 1
@.str.8 = private unnamed_addr constant [39 x i8] c" \09-i              : help information.\0A\00", align 1
@.str.9 = private unnamed_addr constant [44 x i8] c" \09-t [target num] : Select target number.\0A\0A\00", align 1
@plat = common dso_local global %struct.TYPE_2__* null, align 8
@.str.10 = private unnamed_addr constant [13 x i8] c" \09\09{%d} %s.\0A\00", align 1
@.str.11 = private unnamed_addr constant [49 x i8] c"\0A Example: %s -hlocalhost -ux82 -px82 -n21 -t0\0A\0A\00", align 1
@FAD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @prcode_usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @NRL, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* @stdout, align 4
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 (i32, i8*, ...) @fprintf(i32 %5, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %6)
  %8 = load i32, i32* @stdout, align 4
  %9 = call i32 (i32, i8*, ...) @fprintf(i32 %8, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  %10 = load i32, i32* @stdout, align 4
  %11 = call i32 (i32, i8*, ...) @fprintf(i32 %10, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0))
  %12 = load i32, i32* @stdout, align 4
  %13 = call i32 (i32, i8*, ...) @fprintf(i32 %12, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.3, i64 0, i64 0))
  %14 = load i32, i32* @stdout, align 4
  %15 = call i32 (i32, i8*, ...) @fprintf(i32 %14, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.4, i64 0, i64 0))
  %16 = load i32, i32* @stdout, align 4
  %17 = call i32 (i32, i8*, ...) @fprintf(i32 %16, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.5, i64 0, i64 0))
  %18 = load i32, i32* @stdout, align 4
  %19 = call i32 (i32, i8*, ...) @fprintf(i32 %18, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.6, i64 0, i64 0))
  %20 = load i32, i32* @stdout, align 4
  %21 = call i32 (i32, i8*, ...) @fprintf(i32 %20, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.7, i64 0, i64 0))
  %22 = load i32, i32* @stdout, align 4
  %23 = call i32 (i32, i8*, ...) @fprintf(i32 %22, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.8, i64 0, i64 0))
  %24 = load i32, i32* @stdout, align 4
  %25 = call i32 (i32, i8*, ...) @fprintf(i32 %24, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.9, i64 0, i64 0))
  %26 = load i32, i32* @NRL, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %50, %1
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** @plat, align 8
  %29 = load i32, i32* %3, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i64 %30
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i8*, i8** %32, align 8
  %34 = icmp ne i8* %33, null
  br i1 %34, label %35, label %53

35:                                               ; preds = %27
  %36 = load i32, i32* @stdout, align 4
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** @plat, align 8
  %38 = load i32, i32* %3, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 8
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** @plat, align 8
  %44 = load i32, i32* %3, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i64 %45
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 0
  %48 = load i8*, i8** %47, align 8
  %49 = call i32 (i32, i8*, ...) @fprintf(i32 %36, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.10, i64 0, i64 0), i32 %42, i8* %48)
  br label %50

50:                                               ; preds = %35
  %51 = load i32, i32* %3, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %3, align 4
  br label %27

53:                                               ; preds = %27
  %54 = load i32, i32* @stdout, align 4
  %55 = load i8*, i8** %2, align 8
  %56 = call i32 (i32, i8*, ...) @fprintf(i32 %54, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.11, i64 0, i64 0), i8* %55)
  %57 = load i32, i32* @FAD, align 4
  %58 = call i32 @exit(i32 %57) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
